--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["flit_core >=2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "LiteAI"
+name = "liteai_sdk"
 authors = [{ name = "BHznJNs", email = "bhznjns@outlook.com" }]
 description = "A wrapper of LiteLLM"
 readme = "README.md"
@@ -19,6 +19,10 @@ classifiers = [
 ]
 requires-python = ">=3.8.1"
 version = "0.1.0"
+
+dependencies = [
+    "litellm>=1.80.0",
+]
 
 [project.optional-dependencies]
 spark = ["pyspark>=3.0.0"]
