--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,38 +12,26 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
 ]
-requires-python = ">=3.8.1"
+requires-python = ">=3.10"
 version = "0.1.0"
 
 dependencies = [
     "litellm>=1.80.0",
+    "pydantic>=2.0.0",
+    "openai>=2.8.0",
 ]
 
 [project.optional-dependencies]
-spark = ["pyspark>=3.0.0"]
 test = [
-    "bandit[toml]==1.7.5",
-    "black==23.3.0",
-    "check-manifest==0.49",
-    "flake8-bugbear==23.5.9",
-    "flake8-docstrings",
-    "flake8-formatter_junit_xml",
-    "flake8",
-    "flake8-pyproject",
-    "pre-commit==3.3.1",
-    "pylint==2.17.4",
-    "pylint_junit",
-    "pytest-cov==4.0.0",
-    "pytest-mock<3.10.1",
+    "pytest-cov",
+    "pytest-mock",
     "pytest-runner",
-    "pytest==7.3.1",
+    "pytest",
     "pytest-github-actions-annotate-failures",
-    "shellcheck-py==0.9.0.2",
 ]
 
 [project.urls]
@@ -94,7 +82,7 @@ venv = "env37"
 reportMissingImports = true
 reportMissingTypeStubs = false
 
-pythonVersion = "3.8"
+pythonVersion = "3.10"
 pythonPlatform = "Linux"
 
 executionEnvironments = [{ root = "src" }]
