--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,15 +17,17 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 requires-python = ">=3.10"
-version = "0.1.0"
+version = "0.1.1"
 
 dependencies = [
     "litellm>=1.80.0",
     "pydantic>=2.0.0",
-    "openai>=2.8.0",
 ]
 
 [project.optional-dependencies]
+dev = [
+    "python-dotenv>=1.2.1"
+]
 test = [
     "pytest-cov",
     "pytest-mock",
