--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,18 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 requires-python = ">=3.10"
-version = "0.4.0"
+version = "0.5.0"
 
 dependencies = [
     "litellm>=1.80.0",
     "pydantic>=2.0.0",
+
+    # MCP client dependencies
+    "httpx==0.28.1",
+    "mcp==1.25.0",
+    "pydantic==2.12.5",
+    "starlette==0.50.0",
+    "uvicorn==0.40.0",
 ]
 
 [project.optional-dependencies]
