--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/liteai_sdk
+      url: https://pypi.org/p/dais_sdk
     permissions:
       id-token: write  # IMPORTANT: mandatory for trusted publishing
     steps:
@@ -55,7 +55,7 @@ jobs:
   #   runs-on: ubuntu-latest
   #   environment:
   #     name: testpypi
-  #     url: https://test.pypi.org/p/liteai_sdk
+  #     url: https://test.pypi.org/p/dais_sdk
   #   permissions:
   #     id-token: write  # IMPORTANT: mandatory for trusted publishing
   #   steps:
