--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,16 +15,16 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 requires-python = ">=3.14"
-version = "0.6.4"
+version = "0.6.5"
 
 dependencies = [
     "litellm>=1.81.0",
     "pydantic>=2.0.0",
 
     # MCP client dependencies
-    "httpx==0.28.1",
+    "httpx>=0.28.0",
     "mcp==1.26.0",
-    "starlette==0.52.1",
+    "starlette>=0.50.0",
     "uvicorn==0.40.0",
 ]
 
