--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 requires-python = ">=3.14"
-version = "0.6.7"
+version = "0.6.8"
 
 dependencies = [
     "litellm>=1.81.0",
@@ -21,7 +21,7 @@ dependencies = [
     "httpx>=0.28.0",
     "mcp==1.26.0",
     "starlette>=0.50.0",
-    "uvicorn==0.40.0",
+    "uvicorn>=0.40.0",
 ]
 
 [dependency-groups]
