--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 requires-python = ">=3.14"
-version = "0.6.9"
+version = "0.6.10"
 
 dependencies = [
     "litellm>=1.81.0",
@@ -19,7 +19,7 @@ dependencies = [
 
     # MCP client dependencies
     "httpx>=0.28.0",
-    "mcp==1.26.0",
+    "mcp>=1.26.0",
     "starlette>=0.50.0",
     "uvicorn>=0.40.0",
 ]
