--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ classifiers = [
     "Programming Language :: Python :: 3.14",
 ]
 requires-python = ">=3.14"
-version = "0.6.10"
+version = "0.6.11"
 
 dependencies = [
     "litellm>=1.81.0",
@@ -25,9 +25,7 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "python-dotenv>=1.2.1"
-]
+dev = ["python-dotenv>=1.2.1"]
 test = [
     "pytest-cov",
     "pytest-mock",
